--- a/IPSX/Storyboard/Login.storyboard
+++ b/IPSX/Storyboard/Login.storyboard
@@ -156,7 +156,7 @@
         <!--Login Credentials Controler-->
         <scene sceneID="BDT-zl-rsB">
             <objects>
-                <viewController id="yRO-NU-ykG" customClass="LoginCredentialsControler" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EmailLoginScreenID" id="yRO-NU-ykG" customClass="LoginCredentialsControler" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IQS-qV-MEC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
