--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -557,7 +557,7 @@
                                     <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="grr-34-nBj" kind="show" id="GJW-Nk-HKh"/>
+                                    <action selector="logoutButtonAction:" destination="Eii-NL-efe" eventType="touchUpInside" id="9mk-rJ-rUz"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jonAlways" translatesAutoresizingMaskIntoConstraints="NO" id="vbE-wm-rj6">
@@ -779,6 +779,9 @@
                         <viewLayoutGuide key="safeArea" id="HwR-iC-eo1"/>
                     </view>
                     <navigationItem key="navigationItem" id="Hmj-Yu-6es"/>
+                    <connections>
+                        <segue destination="grr-34-nBj" kind="presentation" identifier="showLandingSegueID" id="G9C-WG-gDw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LV9-Pm-siq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -847,6 +850,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="NM2-rh-ZkM"/>
-        <segue reference="TtS-cb-UUJ"/>
+        <segue reference="G9C-WG-gDw"/>
     </inferredMetricsTieBreakers>
 </document>
