Multiple minor UI bug fixes

--- a/IPSX/Storyboard/Login.storyboard
+++ b/IPSX/Storyboard/Login.storyboard
@@ -354,6 +354,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="2Bb-Zx-hUq"/>
                     <connections>
+                        <outlet property="backButton" destination="WR6-rJ-QRl" id="ZoV-Fq-ryl"/>
                         <outlet property="bottomContinueConstraint" destination="ERF-sR-gSa" id="rxY-Kh-FDh"/>
                         <outlet property="continueButton" destination="rF7-LN-NfW" id="cA9-q3-ro1"/>
                         <outlet property="emailRichTextView" destination="nhQ-TM-OQd" id="82Z-P6-GEY"/>
