--- a/IPSX/Storyboard/Search.storyboard
+++ b/IPSX/Storyboard/Search.storyboard
@@ -153,6 +153,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="disclousureImageView" destination="ad6-lD-Fpm" id="KFz-ID-M9c"/>
                                             <outlet property="textlabel" destination="Q2R-Ah-6hi" id="pGX-df-xQJ"/>
                                         </connections>
                                     </tableViewCell>
