--- a/IPSX/Storyboard/Login.storyboard
+++ b/IPSX/Storyboard/Login.storyboard
@@ -360,9 +360,11 @@
                         <outlet property="emailRichTextView" destination="nhQ-TM-OQd" id="82Z-P6-GEY"/>
                         <outlet property="passRichTextField" destination="RzB-N1-Imc" id="HSH-mK-UVb"/>
                         <segue destination="WaM-93-tC1" kind="show" identifier="showAddWalletSegueID" id="nNU-Zf-N1I"/>
+                        <segue destination="9p5-21-zOn" kind="unwind" identifier="showDashboardSegueID" unwindAction="unwindToTabbarWithSegue:" id="fkE-G5-El8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wDm-UV-wHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="9p5-21-zOn" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3025" y="132"/>
         </scene>
